# qproc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  processor.h  queue.h  traits.h
tests/: CMakeLists.txt  test_execute.cpp  test_main.cpp  test_queue.cpp  test_subscribes.cpp
